--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+
 # Required: At least one LLM provider API key
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
@@ -12,12 +13,9 @@ CLAWROUTE_DRY_RUN=false   # Set to "true" to classify + log without actually rer
 CLAWROUTE_DEBUG=false     # Set to "true" for verbose console logging (redacted)
 CLAWROUTE_LOG_CONTENT=false  # DANGER: Set to "true" to log message content (privacy risk)
 
-# Optional: Pro license & billing (v1.1)
-CLAWROUTE_LICENSE=                   # Pro license token (enables all features)
-CLAWROUTE_PRO_RATE=0.02              # Suggested payment = savings × this rate (default 2%)
-CLAWROUTE_PRO_MIN_MONTHLY=9          # Minimum suggested monthly payment in USD
-CLAWROUTE_PRO_GRACE_DAYS=7           # Grace period days for new/lapsed users
-CLAWROUTE_BILLING_STRIPE_URL=        # Stripe checkout URL for payment
-CLAWROUTE_BILLING_USDC_ADDR=         # USDC wallet address for crypto payment
-CLAWROUTE_BILLING_BMC_URL=           # Buy Me a Coffee URL
+# Optional: Donation Support (v1.1)
+CLAWROUTE_DONATION_SUGGESTED=9       # Suggested monthly donation in USD
+CLAWROUTE_DONATION_STRIPE_URL=       # Stripe checkout URL
+CLAWROUTE_DONATION_USDC_ADDR=        # USDC wallet address
+CLAWROUTE_DONATION_BMC_URL=          # Buy Me a Coffee URL
 CLAWROUTE_NOWPAYMENTS_API_KEY=       # NOWPayments API key for crypto gateway
